--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "dzien_1",
+  "name": "kat_fer_s_11",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "",
+  "dependencies": {},
+  "devDependencies": {
+    "babel-core": "6",
+    "babel-loader": "7",
+    "babel-preset-es2015": "6",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^6.0.7",
+    "style-loader": "^0.23.1",
+    "url-loader": "^2.1.0",
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --env.dev --hot",
+    "build": "webpack --env.prod"
   },
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "gulp": "^4.0.2",
-    "gulp-jshint": "^2.1.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemap": "^1.0.1",
-    "gulp-sourcemaps": "^2.6.5",
-    "jshint": "^2.10.2"
-  }
+  "license": "ISC"
 }
